<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_person_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EFEFF4"
    tools:context="com.ff161224.cc_commander.shareplatform.PersonInfo.PersonInfoActivity">

    <!-- 标题 -->
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/my_tittle_bar" />

    <!-- 垂直滚动条 -->
    <ScrollView
        android:id="@+id/index_fragment_scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- 头像 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:layout_marginTop="20dp"
                android:paddingTop="8dp"
                android:paddingBottom="2dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="16dp"
                        android:textColor="#000000"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/pia_avatar"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="3"
                    android:gravity="right">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/wechat_48"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/right32new"/>

                </LinearLayout>

            </LinearLayout>

            <!-- 分割线 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <!-- 姓名 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:paddingTop="8dp"
                android:paddingBottom="2dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="16dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:text="@string/pia_name"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="3"
                    android:gravity="right">

                    <TextView
                        android:id="@+id/user_name_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="16dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="王喆峰"
                        android:textColor="#000000"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/right32new"/>

                </LinearLayout>

            </LinearLayout>

            <!-- 分割线 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <!-- 学号 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:paddingTop="8dp"
                android:paddingBottom="2dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="16dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:text="@string/pia_student_no"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="3"
                    android:gravity="right">

                    <TextView
                        android:id="@+id/user_student_no_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="16dp"
                        android:textColor="#000000"
                        android:layout_gravity="center"
                        android:text="201628013329010"
                        android:gravity="center"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/right32new"/>

                </LinearLayout>

            </LinearLayout>

            <!-- 分割线 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <!-- 学院 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:paddingTop="8dp"
                android:paddingBottom="2dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="16dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:text="@string/pia_school"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="3"
                    android:gravity="right">

                    <TextView
                        android:id="@+id/user_college_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="16dp"
                        android:textColor="#000000"
                        android:text="中国科学院大学"
                        android:layout_gravity="center"
                        android:gravity="center"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/right32new"/>

                </LinearLayout>

            </LinearLayout>

            <!-- 分割线 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <!-- 班级 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:paddingTop="8dp"
                android:paddingBottom="2dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="16dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:text="@string/pia_class"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="3"
                    android:gravity="right">

                    <TextView
                        android:id="@+id/user_class_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="16dp"
                        android:text="713"
                        android:textColor="#000000"
                        android:layout_gravity="center"
                        android:gravity="center"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/right32new"/>

                </LinearLayout>

            </LinearLayout>

            <!-- 分割线 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <!-- 信用等级 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:paddingTop="8dp"
                android:paddingBottom="2dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="16dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="#000000"
                        android:text="@string/pia_credit_level"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="3"
                    android:gravity="right">

                    <TextView
                        android:id="@+id/user_credit_level_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="16dp"
                        android:text="极高"
                        android:textColor="#000000"
                        android:layout_gravity="center"
                        android:gravity="center"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/right32new"/>

                </LinearLayout>

            </LinearLayout>

            <!-- 修改密码 -->
            <LinearLayout
                android:id="@+id/person_info_modify_password_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:layout_marginTop="20dp"
                android:paddingTop="8dp"
                android:paddingBottom="2dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="16dp"
                        android:textColor="#000000"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/pia_modify_password"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="3"
                    android:gravity="right">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/right32new"/>

                </LinearLayout>

            </LinearLayout>

            <!-- 分割线 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <!-- 绑定社交账号 -->
            <LinearLayout
                android:id="@+id/person_info_lock_social_media_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:paddingTop="8dp"
                android:paddingBottom="2dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="16dp"
                        android:textColor="#000000"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/pia_account_binding_setting"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="3"
                    android:gravity="right">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/right32new"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
